sonarqube/kubernetes/sonarqube.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: sonarqube
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
        - name: sonarqube
          image: sonarqube:7.9.1-community
          ports:
          - name: port1
            containerPort: 9000
          - name: port2
            containerPort: 9092
