sonarqube/kubernetes/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
spec:
  type: NodePort
  ports:
    - port: 9000
      targetPort: 9000
      nodePort: 30090
  selector:
    app: sonarqube
