sonarqube/kubernetes/sonarqube-ingress2.yml
#kubernetes v1.22+
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: ci
spec:
  ingressClassName: nginx-vpc
  rules:
  - host: sonarqube.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sonarqube-svc
            port:
              number: 80
